Fixes to mobile layout bug.

--- a/style.css
+++ b/style.css
@@ -6,7 +6,10 @@
 }
 
 .container {
-	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content:flex-end;
+	width: 100vw;
 	min-height: 100vh;
 	background: linear-gradient(135deg, #074156, #000101);
 	padding: 10px;
@@ -14,9 +17,10 @@
 
 .checklist-app {
 	width: 100%;
+	flex: 1;
 	max-width: 540px;
 	background: #fff;
-	margin: 100px auto 20px;
+	margin: 5px auto 20px;
 	padding: 40px 30px 70px;
 	border-radius: 10px;
 }
